# rustracer

./: Cargo.toml  README.md
trace_camera/: Cargo.toml
trace_camera/src/: camera.rs
trace_main/: Cargo.toml
trace_main/src/: main.rs
trace_math/: Cargo.toml
trace_math/src/: hit_info.rs  hittable.rs  lib.rs  material.rs  ray.rs  sphere.rs  vec3.rs
trace_math/src/utils/: math_utils.rs  mod.rs  rand_utils.rs
trace_utils/: Cargo.toml
trace_utils/src/: lib.rs
