[package]
name = "trace_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trace_math = { path = "../trace_math" }
trace_utils = { path = "../trace_utils" }
trace_camera = { path = "../trace_camera" }
simple_bar = "0.1.6"